--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/active?characterEncoding=UTF-8&serverTimezone=GMT&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=alice
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
